[project]
name = "date-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "okokchuy", email = "aguiljes_5@icloud.com" }
]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
date-parser = "date_parser:main"

[build-system]
requires = ["uv_build>=0.11.10,<0.12.0"]
build-backend = "uv_build"
