[project]
name = "date-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "okokchuy", email = "aguiljes_5@icloud.com" }
]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.10,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "nldate"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "ruff>=0.15.13",
]


